# yo-rust

./: CHANGELOG.md  Cargo.toml  README.md  install.ps1  update.ps1  update.sh
src/: cli.rs  config.rs  feedback.rs  main.rs  shortcuts.rs  telemetry.rs  ui.rs
