[package]
name        = "yo-rust"
version     = "2.3.1"
edition     = "2021"
authors     = ["Paul Fleury <hello@paulfleury.com>"]
description = "Natural language terminal assistant — OpenRouter, Ollama, dry-run, shell history, multi-turn context."
license     = "MIT"
repository  = "https://github.com/paulfxyz/yo-rust"
homepage    = "https://github.com/paulfxyz/yo-rust"
keywords    = ["cli", "ai", "shell", "terminal", "openrouter"]
categories  = ["command-line-utilities"]

# ── Binary entry point ────────────────────────────────────────────────────────
# The binary is named `yo` so the user types `yo` directly after install.
[[bin]]
name = "yo"
path = "src/main.rs"

# ── Runtime dependencies ──────────────────────────────────────────────────────
[dependencies]

# reqwest — blocking HTTP client for OpenRouter and Ollama API calls.
# We use `blocking` deliberately: yo-rust makes one outbound request per user
# turn with several seconds of human think-time between turns.  Adding an async
# runtime (tokio) would triple compile time and binary size for zero benefit.
# `json` feature: enables `.json(&body)` / `.json::<T>()` on request/response.
reqwest = { version = "0.12", features = ["blocking", "json"] }

# serde + serde_json — compile-time serialization derive macros.
# Used for:
#   1. Serialising ChatRequest → JSON body for OpenRouter and Ollama.
#   2. Deserialising ChatResponse JSON → Rust structs.
#   3. Serialising/deserialising Config ↔ config.json on disk.
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# dirs — resolves the OS-appropriate config directory:
#   macOS  → ~/Library/Application Support
#   Linux  → ~/.config  (XDG_CONFIG_HOME or fallback)
#   Windows→ %APPDATA%
dirs = "5"

# colored — ANSI terminal colours via method chaining (.cyan().bold()).
# Chosen over raw ANSI codes because it respects NO_COLOR env var and is
# easier to read: `.cyan().bold()` vs `\x1b[1;36m...\x1b[0m`.
colored = "2"

# rustyline — readline-style line editing: arrow keys, Ctrl-A/E/W/U, history.
# We use it for the main REPL prompt AND the Y/N confirmation prompt.
# `add_history_entry` lets users press ↑/↓ to recall previous prompts.
rustyline = "14"

# regex — used in `ai::intent_is_api_change` and `ai::intent_is_ollama_switch`
# to detect natural-language config requests before making any API call.
regex = "1"

# clap — command-line argument parsing for the `--dry` flag and future flags.
# `derive` feature generates a typed Args struct from attribute annotations.
# We use a lightweight setup — no subcommands, just flags.
clap = { version = "4", features = ["derive"] }

# ── Release profile ───────────────────────────────────────────────────────────
[profile.release]
opt-level = 3   # Maximum LLVM optimisation (speed over compile time)
strip     = true # Strip debug symbols (~1-2 MB saving)
lto       = true # Link-time optimisation: cross-crate inlining + dead-code removal
